[gd_scene load_steps=2 format=3 uid="uid://qdndetibeu4v"]

[ext_resource type="Script" uid="uid://dw4uwmghcskom" path="res://addons/godot-rapier-3d/gdscript/physics_controls.gd" id="1_2nu66"]

[node name="Rapier3DPhysicsPipelineControls" type="SubViewportContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true
script = ExtResource("1_2nu66")

[node name="SubViewport" type="SubViewport" parent="."]
disable_3d = true
transparent_bg = true
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="CanvasLayer" type="CanvasLayer" parent="SubViewport"]
layer = 128

[node name="Panel" type="PanelContainer" parent="SubViewport/CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -309.0
offset_bottom = 257.0
grow_horizontal = 0

[node name="MarginContainer" type="MarginContainer" parent="SubViewport/CanvasLayer/Panel"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="GridContainer" type="GridContainer" parent="SubViewport/CanvasLayer/Panel/MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="SubViewport/CanvasLayer/Panel/MarginContainer/GridContainer"]
layout_mode = 2
text = "Godot Rapier 3D"

[node name="RapierHash" type="Label" parent="SubViewport/CanvasLayer/Panel/MarginContainer/GridContainer"]
layout_mode = 2
text = "Rapier hash: "

[node name="GodotHash" type="Label" parent="SubViewport/CanvasLayer/Panel/MarginContainer/GridContainer"]
layout_mode = 2
text = "Godot hash: "

[node name="PlayButton" type="CheckButton" parent="SubViewport/CanvasLayer/Panel/MarginContainer/GridContainer"]
layout_mode = 2
text = "Play"

[node name="Reset" type="Button" parent="SubViewport/CanvasLayer/Panel/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Reset"

[node name="StepButton" type="Button" parent="SubViewport/CanvasLayer/Panel/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Step"

[node name="SaveButton" type="Button" parent="SubViewport/CanvasLayer/Panel/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Save snapshot"

[node name="LoadButton" type="Button" parent="SubViewport/CanvasLayer/Panel/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Load snapshot"

[connection signal="toggled" from="SubViewport/CanvasLayer/Panel/MarginContainer/GridContainer/PlayButton" to="." method="_on_play_button_toggled"]
[connection signal="pressed" from="SubViewport/CanvasLayer/Panel/MarginContainer/GridContainer/Reset" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="SubViewport/CanvasLayer/Panel/MarginContainer/GridContainer/StepButton" to="." method="_on_step_button_pressed"]
[connection signal="pressed" from="SubViewport/CanvasLayer/Panel/MarginContainer/GridContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="SubViewport/CanvasLayer/Panel/MarginContainer/GridContainer/LoadButton" to="." method="_on_load_button_pressed"]
